Adding three publications, formatting the rest
Includes updates to the merge_bib script to check DOIs, and to tidy all bibtex files.

--- a/publications/bib/CCURL.bib
+++ b/publications/bib/CCURL.bib
@@ -1,8 +1,14 @@
 @inproceedings{CCURL,
-	Author    = {Littauer, Richard and Paterson, Hugh},
-	Title     = {Open Source Code Serving Endangered Languages},
-	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
-  Editor    = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
-  Address   = {Portoro\v{z}, Slovenia},
-	Year      = {2016}
+  author        = {Littauer, Richard and Paterson, Hugh},
+  title         = {Open Source Code Serving Endangered Languages},
+  booktitle     = {
+    Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an
+    Alliance for Digital Language Diversity (CCURL) Workshop
+  },
+  editor        = {
+    Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell,
+    Kevin and Wandl-Vogt, Eveline
+  },
+  address       = {Portoro\v{z}, Slovenia},
+  year          = {2016}
 }
