--- a/publications/bib/ChiarcosLOD.bib
+++ b/publications/bib/ChiarcosLOD.bib
@@ -1,9 +1,12 @@
-@InCollection{chiarcos2013building,
-  title={Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
-  author={Chiarcos, Christian and Moran, Steven and Mendes, Pablo N and Nordhoff, Sebastian and Littauer, Richard},
-  Booktitle ={The People’s Web Meets NLP: Collaboratively Constructed Language Resources},
-  Editor    = {Iryna Gurevych and Jungi Kim},
-  pages={315--348},
-  year={2013},
-  publisher={Springer}
+@incollection{chiarcos2013building,
+  title         = {Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
+  author        = {
+    Chiarcos, Christian and Moran, Steven and Mendes, Pablo N and Nordhoff, Sebastian and Littauer,
+    Richard
+  },
+  booktitle     = {The People's Web Meets NLP: Collaboratively Constructed Language Resources},
+  editor        = {Iryna Gurevych and Jungi Kim},
+  pages         = {315--348},
+  year          = {2013},
+  publisher     = {Springer}
 }
