--- a/publications/bib/LittDH.bib
+++ b/publications/bib/LittDH.bib
@@ -1,12 +1,15 @@
 @inproceedings{LittDH,
-	Author    = {Richard Littauer and James Winters and Sean G. Roberts and Hannah Little and Michael Pleyer and Bill Benzon},
-	Title     = {Academic Research in the Blogosphere: Adapting to New Risks and Opportunities on the Internet},
-	Booktitle = {Digital Humanities 2012 Conference Abstracts},
-  Editor    = {Jan Christoph Meister},
-  Pages     = {268-269},
-  Publisher = {Hamburg University Press},
-  Address   = {Hamburg},
-	Year      = {2012},
-  Month     = {July},
-  ISBN      = {978-3-937816-99-9},
+  author        = {
+    Richard Littauer and James Winters and Sean G. Roberts and Hannah Little and Michael Pleyer and
+    Bill Benzon
+  },
+  title         = {Academic Research in the Blogosphere: Adapting to New Risks and Opportunities on the Internet},
+  booktitle     = {Digital Humanities 2012 Conference Abstracts},
+  editor        = {Jan Christoph Meister},
+  pages         = {268--269},
+  publisher     = {Hamburg University Press},
+  address       = {Hamburg},
+  year          = {2012},
+  month         = {July},
+  isbn          = {978-3-937816-99-9}
 }
