--- a/publications/bib/LittDebut.bib
+++ b/publications/bib/LittDebut.bib
@@ -1,10 +1,10 @@
 @article{LittDebut,
-	Author    = {Richard Littauer},
-	Journal   = {Début: The Undergraduate Journal of Languages, Linguistics, and Area Studies},
-	Title     = {Replicating Oliphant's Saussurean Simulations},
-  Year      = {2012},
-  Volume    = {3},
-  Number    = {1},
-  Editor    = {John Canning},
-  URL       = {http://www.llas.ac.uk/news/3088},
+  author        = {Richard Littauer},
+  journal       = {D\'{e}but: The Undergraduate Journal of Languages, Linguistics, and Area Studies},
+  title         = {Replicating {Oliphant}'s Saussurean Simulations},
+  year          = {2012},
+  volume        = {3},
+  number        = {1},
+  editor        = {John Canning},
+  url           = {http://www.llas.ac.uk/news/3088}
 }
