--- a/publications/bib/LittEACL.bib
+++ b/publications/bib/LittEACL.bib
@@ -1,10 +1,10 @@
-@InProceedings{LittEACL,
-  author    = {Richard Littauer and Rory Turnbull and Alexis Palmer},
-  title     = {Visualising Typological Relationships: Plotting WALS with Heat Maps},
-  booktitle = {Proceedings of the EACL 2012 Workshop on the Visualization of Linguistic Patterns},
-  month     = {April},
-  year      = {2012},
-  address   = {Avignon, France},
-  publisher = {Association for Computational Linguistics},
-  pages     = {4},
+@inproceedings{LittEACL,
+  author        = {Richard Littauer and Rory Turnbull and Alexis Palmer},
+  title         = {Visualising Typological Relationships: Plotting {WALS} with Heat Maps},
+  booktitle     = {Proceedings of the EACL 2012 Workshop on the Visualization of Linguistic Patterns},
+  month         = {April},
+  year          = {2012},
+  address       = {Avignon, France},
+  publisher     = {Association for Computational Linguistics},
+  pages         = {4}
 }
