--- a/publications/bib/LittEssex.bib
+++ b/publications/bib/LittEssex.bib
@@ -1,8 +1,8 @@
 @inproceedings{LittEssex,
-	Address   = {Essex, UK},
-	Author    = {Richard Littauer},
-	Booktitle = {Language at the University of Essex (LangUE) 2011 Proceedings},
-	Organization = {Department of Language and Linguistics, University of Essex},
-	Title     = {A Reanalysis of Anatomical Changes for Language},
-	Year      = {2012},
+  address       = {Essex, UK},
+  author        = {Richard Littauer},
+  booktitle     = {Language at the University of Essex (LangUE) 2011 Proceedings},
+  organization  = {Department of Language and Linguistics, University of Essex},
+  title         = {A Reanalysis of Anatomical Changes for Language},
+  year          = {2012}
 }
