--- a/publications/bib/LittEvoA.bib
+++ b/publications/bib/LittEvoA.bib
@@ -1,10 +1,10 @@
 @inproceedings{LittEvoA,
-	Author    = {Richard Littauer},
-	Title     = {The Evolution of Morphological Agreement},
-	Booktitle = {The Evolution of Language: Proceedings of the 9th International Conference (EVOLANG9)},
-  Editor    = {Scott-Phillips, T.C. and Tamariz, M. and Cartmill, E.A. and Hurford, J.R.},
-  Pages     = {484-485},
-  Publisher = {World Scientific},
-  Address   = {Singapore},
-	Year      = {2012},
+  author        = {Richard Littauer},
+  title         = {The Evolution of Morphological Agreement},
+  booktitle     = {The Evolution of Language: Proceedings of the 9th International Conference (EVOLANG9)},
+  editor        = {Scott-Phillips, T.C. and Tamariz, M. and Cartmill, E.A. and Hurford, J.R.},
+  pages         = {484--485},
+  publisher     = {World Scientific},
+  address       = {Singapore},
+  year          = {2012}
 }
