--- a/publications/bib/LittEvoB.bib
+++ b/publications/bib/LittEvoB.bib
@@ -1,10 +1,10 @@
 @inproceedings{LittEvoB,
-	Author    = {Richard Littauer},
-	Title     = {Re-dating the Loss of Laryngeal Air Sacs in Homo Sapiens},
-	Booktitle = {The Evolution of Language: Proceedings of the 9th International Conference (EVOLANG9)},
-  Editor    = {Scott-Phillips, T.C. and Tamariz, M. and Cartmill, E.A. and Hurford, J.R.},
-  Pages     = {486-487},
-  Publisher = {World Scientific},
-  Address   = {Singapore},
-	Year      = {2012}
+  author        = {Richard Littauer},
+  title         = {Re-dating the Loss of Laryngeal Air Sacs in {Homo} sapiens},
+  booktitle     = {The Evolution of Language: Proceedings of the 9th International Conference (EVOLANG9)},
+  editor        = {Scott-Phillips, T.C. and Tamariz, M. and Cartmill, E.A. and Hurford, J.R.},
+  pages         = {486--487},
+  publisher     = {World Scientific},
+  address       = {Singapore},
+  year          = {2012}
 }
