--- a/publications/bib/LittLDL.bib
+++ b/publications/bib/LittLDL.bib
@@ -1,11 +1,14 @@
 @inproceedings{LittLDL,
-	Author    = {Richard Littauer, Boris Villazon-Terrazas, Steven Moran},
-	Title     = {Linguistic Resources Enhanced with Geospatial Information},
-	Booktitle = {Proceedings of the 2nd Workshop on Linked Data in Linguistics (LDL-2013): Representing and linking lexicons, terminologies and other language data},
-  Editor    = {Chiarcos, C. and Cimiano, P. and Declerck, T. and McCrae, J.P.},
-  Pages     = {53-58},
-  Publisher = {Association for Computational Linguistics},
-  Address   = {Pisa, Italy},
-	Year      = {2013},
-  URL       = {https://aclanthology.org/W13-5508/},
+  author        = {Richard Littauer, Boris Villazon-Terrazas, Steven Moran},
+  title         = {Linguistic Resources Enhanced with Geospatial Information},
+  booktitle     = {
+    Proceedings of the 2nd Workshop on Linked Data in Linguistics (LDL-2013): Representing and
+    linking lexicons, terminologies and other language data
+  },
+  editor        = {Chiarcos, C. and Cimiano, P. and Declerck, T. and McCrae, J.P.},
+  pages         = {53--58},
+  publisher     = {Association for Computational Linguistics},
+  address       = {Pisa, Italy},
+  year          = {2013},
+  url           = {https://aclanthology.org/W13-5508/}
 }
