--- a/publications/bib/Littauer2025Emu.bib
+++ b/publications/bib/Littauer2025Emu.bib
@@ -1,13 +1,13 @@
 @article{Littauer2025Emu,
-    author = {Richard Littauer},
-    title = {Nomenclatural corrections for gender of species-group names for two Solomon Island birds},
-    journal = {Emu - Austral Ornithology},
-    volume = {0},
-    number = {0},
-    pages = {1--3},
-    year = {2025},
-    publisher = {Taylor \& Francis},
-    doi = {10.1080/01584197.2025.2551298},
-    URL = {https://doi.org/10.1080/01584197.2025.2551298},
-    eprint = {https://doi.org/10.1080/01584197.2025.2551298}
+  author        = {Richard Littauer},
+  title         = {Nomenclatural corrections for gender of species-group names for two {Solomon Island} birds},
+  journal       = {Emu - Austral Ornithology},
+  volume        = {125},
+  number        = {3},
+  pages         = {261--263},
+  year          = {2025},
+  publisher     = {Taylor \& Francis},
+  doi           = {10.1080/01584197.2025.2551298},
+  url           = {https://doi.org/10.1080/01584197.2025.2551298},
+  eprint        = {https://doi.org/10.1080/01584197.2025.2551298}
 }
