--- a/publications/bib/Littauer2025NotornisKaroro.bib
+++ b/publications/bib/Littauer2025NotornisKaroro.bib
@@ -1,11 +1,11 @@
 @article{Littauer2025NotornisKaroro,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Volume    = {72},
-  Number    = {1},
-  Pages     = {50--53},
-  Journal   = {Notornis},
-  Title     = {First revision of karoro \textit{{Larus} dominicanus antipodum} ({Bruch}, 1853)},
-  URL       = {https://doi.org/10.63172/093633lrrwbq},
-  DOI       = {10.63172/093633lrrwbq}
+  author        = {Richard Littauer},
+  year          = {2025},
+  volume        = {72},
+  number        = {1},
+  pages         = {50--53},
+  journal       = {Notornis},
+  title         = {First revision of karoro {Larus} dominicanus antipodum ({Bruch}, 1853)},
+  url           = {https://doi.org/10.63172/093633lrrwbq},
+  doi           = {10.63172/093633lrrwbq}
 }
