--- a/publications/bib/Littauer2025NotornisLopdell.bib
+++ b/publications/bib/Littauer2025NotornisLopdell.bib
@@ -1,11 +1,11 @@
 @article{Littauer2025NotornisLopdell,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Volume    = {72},
-  Number    = {1},
-  Pages     = {49--50},
-  Journal   = {Notornis},
-  Title     = {A nomenclatural issue related to {Lopdells}’ penguin \textit{{Archaeospheniscus} lopdelli}},
-  URL       = {https://doi.org/10.63172/777144pbjhsf},
-  DOI       = {10.63172/777144pbjhsf}
+  author        = {Richard Littauer},
+  year          = {2025},
+  volume        = {72},
+  number        = {1},
+  pages         = {49--50},
+  journal       = {Notornis},
+  title         = {A nomenclatural issue related to {Lopdells}' penguin {Archaeospheniscus} lopdelli},
+  url           = {https://doi.org/10.63172/777144pbjhsf},
+  doi           = {10.63172/777144pbjhsf}
 }
