--- a/publications/bib/Littauer2025Weta.bib
+++ b/publications/bib/Littauer2025Weta.bib
@@ -1,10 +1,18 @@
 @article{Littauer2025Weta,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Volume    = {58},
-  Pages     = {55--57},
-  Journal   = {The Wētā},
-  Title     = {Audio observation of a Wellington Tree Wētā Hemideina crassidens defence stridulation},
-  URL       = {https://weta.ento.org.nz/index.php/weta/article/view/434},
-  Abstract  = {Wellington Tree Wētā Hemideina crassidens are known to produce a stridulating sound during defense (Field 1982). No papers that I could find have presented publicly available audio files which include this sound. Here, I describe one such call, and encourage others to upload their observations to community science websites.}
+  author        = {Richard Littauer},
+  year          = {2025},
+  volume        = {58},
+  pages         = {55--57},
+  journal       = {The W\={e}t\={a}},
+  title         = {
+    Audio observation of a {Wellington Tree W}\={e}t\={a} {Hemideina} crassidens defence
+    stridulation
+  },
+  url           = {https://weta.ento.org.nz/index.php/weta/article/view/434},
+  abstract      = {
+    Wellington Tree W\={e}t\={a} Hemideina crassidens are known to produce a stridulating sound
+    during defense (Field 1982). No papers that I could find have presented publicly available
+    audio files which include this sound. Here, I describe one such call, and encourage others to
+    upload their observations to community science websites.
+  }
 }
