--- a/publications/bib/Littauer2025ZootaxaHelobdella.bib
+++ b/publications/bib/Littauer2025ZootaxaHelobdella.bib
@@ -1,11 +1,11 @@
 @article{Littauer2025ZootaxaHelobdella,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Volume    = {5673},
-  Number    = {4},
-  Pages     = {598–598},
-  Journal   = {Zootaxa},
-  Title     = {Helobdella serendipitous Saglam et al., 2018 is the available name (Annelida: Hirudinida)},
-  URL       = {https://doi.org/10.11646/zootaxa.5673.4.8},
-  DOI       = {10.11646/zootaxa.5673.4.8}
+  author        = {Richard Littauer},
+  year          = {2025},
+  volume        = {5673},
+  number        = {4},
+  pages         = {598–598},
+  journal       = {Zootaxa},
+  title         = {Helobdella serendipitous {Saglam} et al., 2018 is the available name ({Annelida: Hirudinida})},
+  url           = {https://doi.org/10.11646/zootaxa.5673.4.8},
+  doi           = {10.11646/zootaxa.5673.4.8}
 }
