--- a/publications/bib/LittauerAFOBewicks.bib
+++ b/publications/bib/LittauerAFOBewicks.bib
@@ -1,9 +1,9 @@
 @unpublished{LittauerAFOBewicks,
-  Author    = {Richard Littauer},
-  Year      = {2022},
-  Month     = {October},
-  Title     = {A Proposal for Renaming Bill Types of Bewick's Swans},
-  Note      = {Poster presented at the Centennial Meeting of the Association of Field Ornithologists},
-  Address   = {Plymouth, Massachusetts},
-  URL       = {https://burntfen.com/publications/LittauerAFOBewicks.pdf}
+  author        = {Richard Littauer},
+  year          = {2022},
+  month         = {October},
+  title         = {A Proposal for Renaming Bill Types of {Bewick's} Swans},
+  note          = {Poster presented at the Centennial Meeting of the Association of Field Ornithologists},
+  address       = {Plymouth, Massachusetts},
+  url           = {https://burntfen.com/publications/LittauerAFOBewicks.pdf}
 }
