--- a/publications/bib/OKFLREC.bib
+++ b/publications/bib/OKFLREC.bib
@@ -1,13 +1,23 @@
-@InProceedings{OKFLREC,
-  author = {Christian Chiarcos and Sebastian Hellmann and Sebastian Nordhoff and Steven Moran and Richard Littauer and Judith Eckle-Kohler and Iryna Gurevych and Silvana Hartmann and Michael Matuschek and Christian M. Meyer},
-  title = {The Open Linguistics Working Group},
-  booktitle = {Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)},
-  year = {2012},
-  month = {may},
-  date = {23-25},
-  address = {Istanbul, Turkey},
-  editor = {Nicoletta Calzolari (Conference Chair) and Khalid Choukri and Thierry Declerck and Mehmet Uğur Doğan and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
-  publisher = {European Language Resources Association (ELRA)},
-  isbn = {978-2-9517408-7-7},
-  language = {english}
+@inproceedings{OKFLREC,
+  author        = {
+    Christian Chiarcos and Sebastian Hellmann and Sebastian Nordhoff and Steven Moran and Richard
+    Littauer and Judith Eckle-Kohler and Iryna Gurevych and Silvana Hartmann and Michael Matuschek
+    and Christian M. Meyer
+  },
+  title         = {The Open Linguistics Working Group},
+  booktitle     = {
+    Proceedings of the Eight International Conference on Language Resources and Evaluation
+    (LREC'12)
+  },
+  year          = {2012},
+  month         = {may},
+  date          = {23-25},
+  address       = {Istanbul, Turkey},
+  editor        = {
+    Nicoletta Calzolari (Conference Chair) and Khalid Choukri and Thierry Declerck and Mehmet
+    U\u{g}ur Do\u{g}an and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis
+  },
+  publisher     = {European Language Resources Association (ELRA)},
+  isbn          = {978-2-9517408-7-7},
+  language      = {english}
 }
