--- a/publications/bib/publications.bib
+++ b/publications/bib/publications.bib
@@ -1,15 +1,24 @@
 @inproceedings{CCURL,
  address = {Portoro\v{z}, Slovenia},
  author = {Littauer, Richard and Paterson, Hugh},
- booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
- editor = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
+ booktitle = {
+Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an
+Alliance for Digital Language Diversity (CCURL) Workshop
+},
+ editor = {
+Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell,
+Kevin and Wandl-Vogt, Eveline
+},
  title = {Open Source Code Serving Endangered Languages},
  year = {2016}
 }
 
 @incollection{chiarcos2013building,
- author = {Chiarcos, Christian and Moran, Steven and Mendes, Pablo N and Nordhoff, Sebastian and Littauer, Richard},
- booktitle = {The People’s Web Meets NLP: Collaboratively Constructed Language Resources},
+ author = {
+Chiarcos, Christian and Moran, Steven and Mendes, Pablo N and Nordhoff, Sebastian and Littauer,
+Richard
+},
+ booktitle = {The People's Web Meets NLP: Collaboratively Constructed Language Resources},
  editor = {Iryna Gurevych and Jungi Kim},
  pages = {315--348},
  publisher = {Springer},
@@ -38,8 +47,37 @@
  doi = {10.2173/bow.trimoo2.02},
  editor = {Guy M. Kirwan, Nicholas D. Sly},
  publisher = {Cornell Lab of Ornithology},
- title = {Tristan Moorhen (Gallinula nesiotis), version 2.0},
+ title = {Tristan {Moorhen} ({Gallinula} nesiotis), version 2.0},
  url = {https://doi.org/10.2173/bow.trimoo2.02},
+ year = {2025}
+}
+
+@article{Littauer2025Emu,
+ author = {Richard Littauer},
+ doi = {10.1080/01584197.2025.2551298},
+ eprint = {https://doi.org/10.1080/01584197.2025.2551298},
+ journal = {Emu - Austral Ornithology},
+ number = {3},
+ pages = {261--263},
+ publisher = {Taylor \& Francis},
+ title = {Nomenclatural corrections for gender of species-group names for two {Solomon Island} birds},
+ url = {https://doi.org/10.1080/01584197.2025.2551298},
+ volume = {125},
+ year = {2025}
+}
+
+@article{Littauer2025Melville,
+ author = {Richard Littauer},
+ doi = {10.1353/lvn.2025.a970199},
+ journal = {Leviathan: The Journal of Melville Studies},
+ month = {June},
+ number = {2},
+ pages = {90--101},
+ publisher = {Johns Hopkins University Press},
+ sn = {1750-1849},
+ title = {The Sooty Shearwater as {Melville}'s Inscrutable Haglet},
+ url = {https://doi.org/10.1353/lvn.2025.a970199},
+ volume = {27},
  year = {2025}
 }
 
@@ -49,7 +87,7 @@
  journal = {Notornis},
  number = {1},
  pages = {50--53},
- title = {First revision of karoro \textit{{Larus} dominicanus antipodum} ({Bruch}, 1853)},
+ title = {First revision of karoro {Larus} dominicanus antipodum ({Bruch}, 1853)},
  url = {https://doi.org/10.63172/093633lrrwbq},
  volume = {72},
  year = {2025}
@@ -61,18 +99,26 @@
  journal = {Notornis},
  number = {1},
  pages = {49--50},
- title = {A nomenclatural issue related to {Lopdells}’ penguin \textit{{Archaeospheniscus} lopdelli}},
+ title = {A nomenclatural issue related to {Lopdells}' penguin {Archaeospheniscus} lopdelli},
  url = {https://doi.org/10.63172/777144pbjhsf},
  volume = {72},
  year = {2025}
 }
 
 @article{Littauer2025Weta,
- abstract = {Wellington Tree Wētā Hemideina crassidens are known to produce a stridulating sound during defense (Field 1982). No papers that I could find have presented publicly available audio files which include this sound. Here, I describe one such call, and encourage others to upload their observations to community science websites.},
+ abstract = {
+Wellington Tree W\={e}t\={a} Hemideina crassidens are known to produce a stridulating sound
+during defense (Field 1982). No papers that I could find have presented publicly available
+audio files which include this sound. Here, I describe one such call, and encourage others to
+upload their observations to community science websites.
+},
  author = {Richard Littauer},
- journal = {The Wētā},
+ journal = {The W\={e}t\={a}},
  pages = {55--57},
- title = {Audio observation of a Wellington Tree Wētā Hemideina crassidens defence stridulation},
+ title = {
+Audio observation of a {Wellington Tree W}\={e}t\={a} {Hemideina} crassidens defence
+stridulation
+},
  url = {https://weta.ento.org.nz/index.php/weta/article/view/434},
  volume = {58},
  year = {2025}
@@ -84,9 +130,24 @@
  journal = {Zootaxa},
  number = {4},
  pages = {598–598},
- title = {Helobdella serendipitous Saglam et al., 2018 is the available name (Annelida: Hirudinida)},
+ title = {Helobdella serendipitous {Saglam} et al., 2018 is the available name ({Annelida: Hirudinida})},
  url = {https://doi.org/10.11646/zootaxa.5673.4.8},
  volume = {5673},
+ year = {2025}
+}
+
+@article{Littauer2025ZootaxaNotonectidae,
+ author = {Richard Littauer},
+ doi = {10.11646/zootaxa.5618.2.8},
+ journal = {Zootaxa},
+ number = {2},
+ pages = {287–288},
+ title = {
+Corrections for agreement in gender in {Notonectidae (Hemiptera: Heteroptera)} under {Article}
+31 of the {Code}
+},
+ url = {https://doi.org/10.11646/zootaxa.5618.2.8},
+ volume = {5618},
  year = {2025}
 }
 
@@ -95,10 +156,40 @@
  doi = {10.11646/zootaxa.5569.2.11},
  journal = {Zootaxa},
  number = {2},
- pages = {400-400},
- title = {Corrections for grammatical agreement in Ophiodermatidae},
+ pages = {400--400},
+ title = {Corrections for grammatical agreement in {Ophiodermatidae}},
  url = {https://doi.org/10.11646/zootaxa.5569.2.11},
  volume = {5569},
+ year = {2025}
+}
+
+@article{Littauer2025ZootaxaPsacodromeus,
+ author = {Richard Littauer},
+ doi = {10.11646/zootaxa.5691.1.10},
+ journal = {Zootaxa},
+ number = {1},
+ pages = {150--150},
+ title = {
+\textit{{Psacodromeus} rectus} {Lee, Nam \& Park}, 2024 ({Coleoptera: Adephaga:
+Trachypachidae}) is the available name
+},
+ url = {https://doi.org/10.11646/zootaxa.5691.1.10},
+ volume = {5691},
+ year = {2025}
+}
+
+@article{Littauer2025ZootaxaPycnocraspedum,
+ author = {Richard Littauer},
+ doi = {10.11646/zootaxa.5692.1.12},
+ journal = {Zootaxa},
+ number = {1},
+ pages = {200--200},
+ title = {
+On the correct spelling of \textit{{Pycnocraspedum} rowleyense} {Schwarzhans, Psomadakis \&
+Nielsen}, 2025 ({Ophidiidae})
+},
+ url = {https://doi.org/10.11646/zootaxa.5692.1.12},
+ volume = {5692},
  year = {2025}
 }
 
@@ -107,7 +198,7 @@
  author = {Richard Littauer},
  month = {October},
  note = {Poster presented at the Centennial Meeting of the Association of Field Ornithologists},
- title = {A Proposal for Renaming Bill Types of Bewick's Swans},
+ title = {A Proposal for Renaming Bill Types of {Bewick's} Swans},
  url = {https://burntfen.com/publications/LittauerAFOBewicks.pdf},
  year = {2022}
 }
@@ -115,9 +206,9 @@
 @article{LittDebut,
  author = {Richard Littauer},
  editor = {John Canning},
- journal = {Début: The Undergraduate Journal of Languages, Linguistics, and Area Studies},
+ journal = {D\'{e}but: The Undergraduate Journal of Languages, Linguistics, and Area Studies},
  number = {1},
- title = {Replicating Oliphant's Saussurean Simulations},
+ title = {Replicating {Oliphant}'s Saussurean Simulations},
  url = {http://www.llas.ac.uk/news/3088},
  volume = {3},
  year = {2012}
@@ -125,12 +216,15 @@
 
 @inproceedings{LittDH,
  address = {Hamburg},
- author = {Richard Littauer and James Winters and Sean G. Roberts and Hannah Little and Michael Pleyer and Bill Benzon},
+ author = {
+Richard Littauer and James Winters and Sean G. Roberts and Hannah Little and Michael Pleyer and
+Bill Benzon
+},
  booktitle = {Digital Humanities 2012 Conference Abstracts},
  editor = {Jan Christoph Meister},
  isbn = {978-3-937816-99-9},
  month = {July},
- pages = {268-269},
+ pages = {268--269},
  publisher = {Hamburg University Press},
  title = {Academic Research in the Blogosphere: Adapting to New Risks and Opportunities on the Internet},
  year = {2012}
@@ -143,18 +237,21 @@
  month = {April},
  pages = {4},
  publisher = {Association for Computational Linguistics},
- title = {Visualising Typological Relationships: Plotting WALS with Heat Maps},
+ title = {Visualising Typological Relationships: Plotting {WALS} with Heat Maps},
  year = {2012}
 }
 
 @inproceedings{LittEdulearn,
  address = {Barcelona, Spain},
  author = {Richard Littauer and Antonia Scheidel and Marc Schulder and Sibel Ciddi},
- booktitle = {Proceedings of the 4th International Conference on Education and New Learning Technologies (EDULEARN12)},
+ booktitle = {
+Proceedings of the 4th International Conference on Education and New Learning Technologies
+(EDULEARN12)
+},
  editor = {L. G\'omez Chova, L. and I. Candel Torres and A. L\'opez Mart\'inez},
  ibsn = {978-84-695-3491-5},
  month = {July},
- pages = {1473-1481},
+ pages = {1473--1481},
  publisher = {International Association of Technology, Education and Development (IATED)},
  title = {Crowd Sourcing the Classroom: Interactive Applications in Higher Learning},
  year = {2012}
@@ -174,7 +271,7 @@
  author = {Richard Littauer},
  booktitle = {The Evolution of Language: Proceedings of the 9th International Conference (EVOLANG9)},
  editor = {Scott-Phillips, T.C. and Tamariz, M. and Cartmill, E.A. and Hurford, J.R.},
- pages = {484-485},
+ pages = {484--485},
  publisher = {World Scientific},
  title = {The Evolution of Morphological Agreement},
  year = {2012}
@@ -185,18 +282,23 @@
  author = {Richard Littauer},
  booktitle = {The Evolution of Language: Proceedings of the 9th International Conference (EVOLANG9)},
  editor = {Scott-Phillips, T.C. and Tamariz, M. and Cartmill, E.A. and Hurford, J.R.},
- pages = {486-487},
+ pages = {486--487},
  publisher = {World Scientific},
- title = {Re-dating the Loss of Laryngeal Air Sacs in Homo Sapiens},
+ title = {Re-dating the Loss of Laryngeal Air Sacs in {Homo} sapiens},
  year = {2012}
 }
 
 @inproceedings{LittEvoC,
  address = {Tokyo, Japan},
- author = {Richard Littauer, Sean G. Roberts, James Winters, Rachael Bailes, Michael Pleyer, Hannah Little},
- booktitle = {The Past, Present and Future of Language Evolution Research: Student Volume of the 9th International Conference on the Evolution of Language},
+ author = {
+Richard Littauer, Sean G. Roberts, James Winters, Rachael Bailes, Michael Pleyer, Hannah Little
+},
+ booktitle = {
+The Past, Present and Future of Language Evolution Research: Student Volume of the 9th
+International Conference on the Evolution of Language
+},
  editor = {McCrohon, L. and Thompson, B. and Verhoef, T. and Yamauchi, H.},
- pages = {121-132},
+ pages = {121--132},
  publisher = {Evolang 9 Organizing Committee},
  title = {From the Savannah to the Cloud: Blogging Evolutionary Linguistics Research},
  url = {http://kyoto.evolang.org/sites/default/files/student_volume.pdf},
@@ -204,23 +306,59 @@
 }
 
 @inproceedings{LittIDCC,
- abstract = {Scientific workflows are typically used to automate the processing, analysis, and management of scientific data. Most scientific workflow programs provide a user-friendly graphical user interface that enables scientists to more easily create and visualize complex workflows that may be comprised of dozens of processing and analytical steps. Furthermore, many workflows provide mechanisms for tracing provenance and methodologies that foster reproducible science. Despite their potential for enabling science, few studies have examined how the process of creating, executing, and sharing workflows can be improved. In order to promote open discourse and access to scientific methods as well as data, we analyzed a wide variety of workflow systems and publicly-available workflows on the public repository myExperiment. It is hoped that understanding the usage of workflows and developing a set of recommended best practices will lead to increased contribution of workflows to the public domain.},
- author = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
+ abstract = {
+Scientific workflows are typically used to automate the processing, analysis, and management of
+scientific data. Most scientific workflow programs provide a user-friendly graphical user
+interface that enables scientists to more easily create and visualize complex workflows that
+may be comprised of dozens of processing and analytical steps. Furthermore, many workflows
+provide mechanisms for tracing provenance and methodologies that foster reproducible science.
+Despite their potential for enabling science, few studies have examined how the process of
+creating, executing, and sharing workflows can be improved. In order to promote open discourse
+and access to scientific methods as well as data, we analyzed a wide variety of workflow
+systems and publicly-available workflows on the public repository myExperiment. It is hoped
+that understanding the usage of workflows and developing a set of recommended best practices
+will lead to increased contribution of workflows to the public domain.
+},
+ author = {
+Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca
+Koskela
+},
  journal = {7th International Digital Curation Conference Proceedings},
  month = {December},
- title = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
+ title = {
+Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for
+Best Practices.
+},
  year = {2011}
 }
 
 @article{LittIJDC,
- abstract = {Scientific workflows are typically used to automate the processing, analysis and management of scientific data. Most scientific workflow programs provide a user-friendly graphical user interface that enables scientists to more easily create and visualize complex workflows that may be comprised of dozens of processing and analytical steps. Furthermore, many workflows provide mechanisms for tracing provenance and methodologies that foster reproducible science. Despite their potential for enabling science, few studies have examined how the process of creating, executing, and sharing workflows can be improved. In order to promote open discourse and access to scientific methods as well as data, we analyzed a wide variety of workflow systems and publicly available workflows on the public repository myExperiment. It is hoped that understanding the usage of workflows and developing a set of recommended best practices will lead to increased contribution of workflows to the public domain.},
- author = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
+ abstract = {
+Scientific workflows are typically used to automate the processing, analysis and management of
+scientific data. Most scientific workflow programs provide a user-friendly graphical user
+interface that enables scientists to more easily create and visualize complex workflows that
+may be comprised of dozens of processing and analytical steps. Furthermore, many workflows
+provide mechanisms for tracing provenance and methodologies that foster reproducible science.
+Despite their potential for enabling science, few studies have examined how the process of
+creating, executing, and sharing workflows can be improved. In order to promote open discourse
+and access to scientific methods as well as data, we analyzed a wide variety of workflow
+systems and publicly available workflows on the public repository myExperiment. It is hoped
+that understanding the usage of workflows and developing a set of recommended best practices
+will lead to increased contribution of workflows to the public domain.
+},
+ author = {
+Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca
+Koskela
+},
  doi = {doi:10.2218/ijdc.v7i2.232},
  issn = {1746-8256},
  journal = {International Journal of Data Curation},
  number = {2},
- pages = {92-100},
- title = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
+ pages = {92--100},
+ title = {
+Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for
+Best Practices.
+},
  url = {http://ijdc.net/index.php/ijdc/article/view/222},
  volume = {7},
  year = {2012}
@@ -229,9 +367,12 @@
 @inproceedings{LittLDL,
  address = {Pisa, Italy},
  author = {Richard Littauer, Boris Villazon-Terrazas, Steven Moran},
- booktitle = {Proceedings of the 2nd Workshop on Linked Data in Linguistics (LDL-2013): Representing and linking lexicons, terminologies and other language data},
+ booktitle = {
+Proceedings of the 2nd Workshop on Linked Data in Linguistics (LDL-2013): Representing and
+linking lexicons, terminologies and other language data
+},
  editor = {Chiarcos, C. and Cimiano, P. and Declerck, T. and McCrae, J.P.},
- pages = {53-58},
+ pages = {53--58},
  publisher = {Association for Computational Linguistics},
  title = {Linguistic Resources Enhanced with Geospatial Information},
  url = {https://aclanthology.org/W13-5508/},
@@ -241,7 +382,11 @@
 @article{LittLinguist2012,
  author = {Richard Littauer},
  journal = {LINGUIST List},
- title = {Review of Harold F. Shiffman and Brian Spooner (Eds.), (2011). Language Policy and Language Conflict in Afghanistan and Its Neighbors. In: Brill's Studies in South and Southwest Asian Languages. Leiden: Brill.},
+ title = {
+Review of {Harold F. Shiffman} and {Brian Spooner} (Eds.), (2011). Language Policy and Language
+Conflict in {Afghanistan} and Its Neighbors. In: {Brill}'s Studies in South and Southwest
+{Asian} Languages. {Leiden: Brill}.
+},
  url = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=4553348},
  volume = {23.3813},
  year = {2012}
@@ -250,31 +395,60 @@
 @article{LittLinguist2013,
  author = {Richard Littauer},
  journal = {LINGUIST List},
- title = {Review of F. Seifart, G. Haig, N. Himmelmann, D. Jung, A. Margetts, & P. Trilsbeek, eds., Potentials of Language Documentation: Methods, Analyses, and Utilization. In: Language Documentation & Conservation Special Publication No. 3. Online: University of Hawai'i Press.},
+ title = {
+Review of {F. Seifart, G. Haig, N. Himmelmann, D. Jung, A. Margetts, \& P. Trilsbeek}, eds.,
+Potentials of Language Documentation: Methods, Analyses, and Utilization. In: Language
+Documentation \& Conservation Special Publication No. 3. Online: {University} of {Hawai'i
+Press}.
+},
  url = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=12670360},
  volume = {24.2604},
  year = {2013}
 }
 
 @inproceedings{LittULAB,
- abstract = {I argue that there may have been pressures inhibiting phonological change in Tocharian, particularly in relation to the centum/satem Indo-European split. Firstly, if the overall complexity of language strata may change over time (Sampson, 2009), syntactic, morphological, and lexical changes may have inhibited a change in the phonemic inventory of the language. Secondly, I examine the historical evidence for other languages in historical Central Asia in order to show that contact languages may have also horizontally influenced the centum nature of Tocharian. Thirdly, I posit that the merge of the PIE dorsal consonants may have been influenced by the decline in the general use, domain and range of Tocharian, which would be in line with recent research correlating small phonemic inventories with small language communities (Hay \& Bauer, 2007). Tocharian therefore may not have been susceptible to a weak dialect wave, or to a possible early branching of IE. This paper takes a new perspective on the history and development of Tocharian, and in turn on the nature of the ‘textbook’ isogloss example.},
+ abstract = {
+I argue that there may have been pressures inhibiting phonological change in Tocharian,
+particularly in relation to the centum/satem Indo-European split. Firstly, if the overall
+complexity of language strata may change over time (Sampson, 2009), syntactic, morphological,
+and lexical changes may have inhibited a change in the phonemic inventory of the language.
+Secondly, I examine the historical evidence for other languages in historical Central Asia in
+order to show that contact languages may have also horizontally influenced the centum nature of
+Tocharian. Thirdly, I posit that the merge of the PIE dorsal consonants may have been
+influenced by the decline in the general use, domain and range of Tocharian, which would be in
+line with recent research correlating small phonemic inventories with small language
+communities (Hay \& Bauer, 2007). Tocharian therefore may not have been susceptible to a weak
+dialect wave, or to a possible early branching of IE. This paper takes a new perspective on the
+history and development of Tocharian, and in turn on the nature of the `textbook' isogloss
+example.
+},
  address = {Bristol, UK},
  author = {Richard Littauer},
  booktitle = {Undergraduate Linguistics Association of Britain 2012 Proceedings},
  doi = {10.5281/zenodo.6969559},
  editor = {Caitlin Wilson},
  month = {August},
- title = {On Tocharian Exceptionality to the centum-satem Isogloss},
+ title = {On {Tocharian} Exceptionality to the centum-satem {Isogloss}},
  url = {https://doi.org/10.5281/zenodo.6969559},
  year = {2022}
 }
 
 @inproceedings{OKFLREC,
  address = {Istanbul, Turkey},
- author = {Christian Chiarcos and Sebastian Hellmann and Sebastian Nordhoff and Steven Moran and Richard Littauer and Judith Eckle-Kohler and Iryna Gurevych and Silvana Hartmann and Michael Matuschek and Christian M. Meyer},
- booktitle = {Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)},
+ author = {
+Christian Chiarcos and Sebastian Hellmann and Sebastian Nordhoff and Steven Moran and Richard
+Littauer and Judith Eckle-Kohler and Iryna Gurevych and Silvana Hartmann and Michael Matuschek
+and Christian M. Meyer
+},
+ booktitle = {
+Proceedings of the Eight International Conference on Language Resources and Evaluation
+(LREC'12)
+},
  date = {23-25},
- editor = {Nicoletta Calzolari (Conference Chair) and Khalid Choukri and Thierry Declerck and Mehmet Uğur Doğan and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
+ editor = {
+Nicoletta Calzolari (Conference Chair) and Khalid Choukri and Thierry Declerck and Mehmet
+U\u{g}ur Do\u{g}an and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis
+},
  isbn = {978-2-9517408-7-7},
  language = {english},
  month = {may},
@@ -284,26 +458,20 @@
 }
 
 @article{WSSSPE2,
- author = {Daniel S. Katz and
-Sou{-}Cheng T. Choi and
-Nancy Wilkins{-}Diehr and
-Neil Chue Hong and
-Colin C. Venters and
-James Howison and
-Frank J. Seinstra and
-Matthew Jones and
-Karen Cranston and
-Thomas L. Clune and
-Miguel de Val{-}Borro and
-Richard Littauer},
+ author = {
+Daniel S. Katz and Sou{-}Cheng T. Choi and Nancy Wilkins{-}Diehr and Neil Chue Hong and Colin
+C. Venters and James Howison and Frank J. Seinstra and Matthew Jones and Karen Cranston and
+Thomas L. Clune and Miguel de Val{-}Borro and Richard Littauer
+},
  bibsource = {dblp computer science bibliography, http://dblp.org},
  biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/KatzCWHVHSJCCVL15},
  journal = {CoRR},
  timestamp = {Sun, 02 Aug 2015 18:42:02 +0200},
- title = {Report on the Second Workshop on Sustainable Software for Science:
-Practice and Experiences {(WSSSPE2)}},
+ title = {
+Report on the Second Workshop on Sustainable Software for Science: Practice and Experiences
+{({WSSSPE2})}
+},
  url = {http://arxiv.org/abs/1507.01715},
  volume = {abs/1507.01715},
  year = {2015}
 }
-
