--- a/publications/bib/LittLinguist2013.bib
+++ b/publications/bib/LittLinguist2013.bib
@@ -1,8 +1,13 @@
 @article{LittLinguist2013,
-  Author    = {Richard Littauer},
-  Title     = {Review of F. Seifart, G. Haig, N. Himmelmann, D. Jung, A. Margetts, & P. Trilsbeek, eds., Potentials of Language Documentation: Methods, Analyses, and Utilization. In: Language Documentation & Conservation Special Publication No. 3. Online: University of Hawai'i Press.},
-  Journal = {LINGUIST List},
-  Year      = {2013},
-  Volume    = {24.2604},
-  URL       = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=12670360}
+  author        = {Richard Littauer},
+  title         = {
+    Review of {F. Seifart, G. Haig, N. Himmelmann, D. Jung, A. Margetts, \& P. Trilsbeek}, eds.,
+    Potentials of Language Documentation: Methods, Analyses, and Utilization. In: Language
+    Documentation \& Conservation Special Publication No. 3. Online: {University} of {Hawai'i
+    Press}.
+  },
+  journal       = {LINGUIST List},
+  year          = {2013},
+  volume        = {24.2604},
+  url           = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=12670360}
 }
