--- a/publications/bib/Littauer2025Bewicks.bib
+++ b/publications/bib/Littauer2025Bewicks.bib
@@ -1,13 +1,13 @@
 @article{Littauer2025Bewicks,
-  author = {Richard Littauer},
-  title = {Renaming a bill type for {Tundra Swan} ({C}ygnus columbianus)},
-  journal = {The {Wilson} Journal of Ornithology},
-  volume = {0},
-  number = {0},
-  pages = {1--3},
-  year = {2025},
-  publisher = {Taylor \& Francis},
-  doi = {10.1080/15594491.2025.2498780},
-  URL = {https://doi.org/10.1080/15594491.2025.2498780},
-  eprint = {https://doi.org/10.1080/15594491.2025.2498780}
+  author        = {Richard Littauer},
+  title         = {Renaming a bill type for {Tundra Swan} ({C}ygnus columbianus)},
+  journal       = {The {Wilson} Journal of Ornithology},
+  volume        = {0},
+  number        = {0},
+  pages         = {1--3},
+  year          = {2025},
+  publisher     = {Taylor \& Francis},
+  doi           = {10.1080/15594491.2025.2498780},
+  url           = {https://doi.org/10.1080/15594491.2025.2498780},
+  eprint        = {https://doi.org/10.1080/15594491.2025.2498780}
 }
