--- a/publications/bib/Littauer2025Botw.bib
+++ b/publications/bib/Littauer2025Botw.bib
@@ -1,11 +1,11 @@
-@InCollection{Littauer2025Botw,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Title     = {Tristan Moorhen (Gallinula nesiotis), version 2.0},
-  Editor    = {Guy M. Kirwan, Nicholas D. Sly},
-  Booktitle = {Birds of the World},
-  Publisher = {Cornell Lab of Ornithology},
-  Address   = {Ithaca, NY},
-  URL       = {https://doi.org/10.2173/bow.trimoo2.02},
-  DOI       = {10.2173/bow.trimoo2.02}
+@incollection{Littauer2025Botw,
+  author        = {Richard Littauer},
+  year          = {2025},
+  title         = {Tristan {Moorhen} ({Gallinula} nesiotis), version 2.0},
+  editor        = {Guy M. Kirwan, Nicholas D. Sly},
+  booktitle     = {Birds of the World},
+  publisher     = {Cornell Lab of Ornithology},
+  address       = {Ithaca, NY},
+  url           = {https://doi.org/10.2173/bow.trimoo2.02},
+  doi           = {10.2173/bow.trimoo2.02}
 }
