--- a/publications/bib/Littauer2025ZootaxaNotonectidae.bib
+++ b/publications/bib/Littauer2025ZootaxaNotonectidae.bib
@@ -1,11 +1,14 @@
 @article{Littauer2025ZootaxaNotonectidae,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Volume    = {5618},
-  Number    = {2},
-  Pages     = {287–288},
-  Journal   = {Zootaxa},
-  Title     = {Corrections for agreement in gender in Notonectidae (Hemiptera: Heteroptera) under Article 31 of the Code},
-  URL       = {https://doi.org/10.11646/zootaxa.5618.2.8},
-  DOI       = {10.11646/zootaxa.5618.2.8}
+  author        = {Richard Littauer},
+  year          = {2025},
+  volume        = {5618},
+  number        = {2},
+  pages         = {287–288},
+  journal       = {Zootaxa},
+  title         = {
+    Corrections for agreement in gender in {Notonectidae (Hemiptera: Heteroptera)} under {Article}
+    31 of the {Code}
+  },
+  url           = {https://doi.org/10.11646/zootaxa.5618.2.8},
+  doi           = {10.11646/zootaxa.5618.2.8}
 }
