--- a/publications/bib/Littauer2025ZootaxaOphiodermatidae.bib
+++ b/publications/bib/Littauer2025ZootaxaOphiodermatidae.bib
@@ -1,11 +1,11 @@
 @article{Littauer2025ZootaxaOphiodermatidae,
-  Author    = {Richard Littauer},
-  Year      = {2025},
-  Volume    = {5569},
-  Number    = {2},
-  Pages     = {400-400},
-  Journal   = {Zootaxa},
-  Title     = {Corrections for grammatical agreement in Ophiodermatidae},
-  URL       = {https://doi.org/10.11646/zootaxa.5569.2.11},
-  DOI       = {10.11646/zootaxa.5569.2.11}
+  author        = {Richard Littauer},
+  year          = {2025},
+  volume        = {5569},
+  number        = {2},
+  pages         = {400--400},
+  journal       = {Zootaxa},
+  title         = {Corrections for grammatical agreement in {Ophiodermatidae}},
+  url           = {https://doi.org/10.11646/zootaxa.5569.2.11},
+  doi           = {10.11646/zootaxa.5569.2.11}
 }
